--- a/public/styles/scss/base/_reset-css.scss
+++ b/public/styles/scss/base/_reset-css.scss
@@ -20,6 +20,7 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
 		family: inherit;
 		weight: inherit;
 		size: 62.5%;
+		display: swap;
 	}
     color: inherit;
 	-webkit-font-smoothing: antialiased;
