--- a/public/styles/scss/base/_form.scss
+++ b/public/styles/scss/base/_form.scss
@@ -7,7 +7,6 @@
 	width: 100%;
 	height: 50px;
 	margin: {
-		right: 5px;
 		bottom: 8px;
 	}
 	padding: 2px 2px 0 2px;
@@ -45,7 +44,12 @@
 }
 
 form {
+	width: 500px;
+	
 	background-color: $main-third_col;
+	@include box-shadow(0px 0px 7px 1px rgba(0, 0, 0, 0.14));
+	
+	overflow: hidden;
 
 	input {
 		&:-webkit-autofill {
@@ -60,9 +64,15 @@ input {
 }
 
 input[type="checkbox"] {
-	width: 15px;
-	height: 15px;
+	width: 25px;
+	height: 25px;
 }
+
+// [type="checkbox"]:not(:checked),
+// [type="checkbox"]:checked {
+//   position: absolute;
+//   left: -9999px;
+// }
 
 input[type="email"]:invalid {
 	@include box-shadow(none);
