--- a/public/styles/scss/layouts/_dashboard.scss
+++ b/public/styles/scss/layouts/_dashboard.scss
@@ -1,3 +1,109 @@
 /*  ==================
     Dashboard
     ================== */
+
+$dashboard-sidebar-w: 350px;
+$dashboard-max-w: 1550px !important;
+$dashboard-menu--width: 75px;
+
+.dashboard {
+    &-sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: $dashboard-sidebar-w;
+        height: 100%;
+
+        background-color: $main-second_col;
+        border-right: solid 1px $light_gray_col;
+
+        z-index: $sidebar_index;
+
+        &--heading {
+            width: 100%;
+            height: 5px;
+
+            background-color: $main-third--special_col;
+        }
+
+        &--container {
+            @include flexbox((
+                display: flex,
+                flex-direction: column,
+                justify-content: center,
+            ));
+            align-items: center;
+            margin-left: $dashboard-menu--width;
+            padding: 30px;
+        }
+    }
+
+    &--avatar {
+        width: 175px;
+        height: 175px;
+
+        @include border-radius(50%);
+        background-color: $main-third_col;
+    }
+
+    &-menu {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: $dashboard-menu--width;
+        height: 100%;
+
+        background-color: $main-third_col;
+    }
+
+    &-main {
+        margin-left: $dashboard-sidebar-w;
+    }
+
+    &-header {
+        background-color: $main-second_col;
+
+        .container {
+            max-width: $dashboard-max-w;
+        }
+
+        &_review {
+            &--container {
+                width: 100%;
+            }
+
+            &--content {
+                width: 100%;
+            }
+        }
+    }
+
+    &-body {
+        max-width: $dashboard-max-w;
+        padding: 0;
+
+        &--line {
+            width: 100%;
+        }
+
+        &_box {
+            &--wrapper {
+                margin: -7.5px;
+                height: 390px;
+
+                padding: 20px;
+            }
+
+            &--vertical {
+                height: 203px;
+                margin-bottom: -16px;
+            }
+
+            width: 100%;
+            height: 100%;
+
+            @include border-radius(10px);
+            background-color: $main-second_col;
+        }
+    }
+}
