--- a/public/styles/scss/tools/_settings.scss
+++ b/public/styles/scss/tools/_settings.scss
@@ -7,7 +7,7 @@ $dark_col: #111111;
 $dark_col_hover: #0D0D0D;
 $dark_col_focus: #080808;
 
-$light_gray_col: #707070;
+$light_gray_col: #878787;
 
 $gold_col: #A17836;
 
@@ -37,9 +37,9 @@ $main-third--special_col--hover: #e85610;
 $main-third--special_col--focus: #e85109;
 
 // FULL DARK PALETTE
-$full-dark-first_col: #0e0e0e;
-$full-dark-second_col: #050608;
-$full-dark-third_col: #090909;
+$full-dark-first_col: #292929;
+$full-dark-second_col: #212121;
+$full-dark-third_col: #181718;
 
 // Variables of time
 $vsm_tr: 0.15s;
